# catan-statistics

./: .dockerignore  .gitignore  Makefile  README.md  board.py  catan_helper.py  config.py  docker-compose.yml  game.py  image_service.py  main.py  maps.py  openai_service.py  pyproject.toml  requirements.txt  vercel.json
api/: Dockerfile  app.py  config.py  requirements.txt
api/models/: game.py
api/routes/: games.py
api/services/: game_logic.py  image_processing.py  openai_client.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  responsive.css
frontend/src/components/: BoardLegend.js  CollapsibleCard.js  HexBoard.js  PortBadge.js  ResourceRadar.js  ScarcityCard.js  SettlementsCard.js  SetupBoardPreview.js  SetupForm.js  StatsPanel.js  TipsCard.js  TradingCard.js
frontend/src/shared/: ThemeContext.js  boardGeometry.js  constants.js
frontend/src/styles/: App.styles.js  SetupForm.styles.js  StatsPanel.styles.js  TipsCard.styles.js
models/: probability.py
services/: image.py  openai.py
