[project]
name = "catan-statistics"
version = "0.1.0"
description = ""
authors = [
    {name = "jeremymaignan",email = "jeremy.maignan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click (==8.1.7)",
    "termcolor (>=3.1.0,<4.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "openai (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "mypy (==1.15.0)",
    "isort (==5.13.2)"
]
